[tool.poetry]
name = "practical-nlp-toolkit"
version = "0.1.0"
description = ""
authors = ["Vatsal-Malaviya <vmalaviy@asu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
torch = {version = "^2.2.0+cu118", source = "pytorch-gpu-src"}
torchvision = {version = "^0.17.0+cu118", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.2.0+cu118", source = "pytorch-gpu-src"}
ipykernel = "^6.29.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
